kubernetes/services/miniflux.yml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: miniflux

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: default
spec:
  tls:
    - hosts:
        - miniflux.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: miniflux.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: default
  labels:
    app: miniflux
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: app
          image: miniflux/miniflux
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - name: web
              containerPort: 8080
